--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+*
+!*/
+!*.*
+
 # Prerequisites
 *.d
 
@@ -33,6 +37,7 @@
 
 x64/
 x86/
+Win32/
 Debug/
 Release/
 *.html
@@ -42,6 +47,7 @@ Release/
 build/
 .venv/
 
+cython/*.cpp
 libtorch/*
 !libtorch/.gitkeep
 *.pkl
