--- a/Toguzkumalak/CMakeLists.txt
+++ b/Toguzkumalak/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Toguzkumalak)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+option(USE_CUDA "Enable CUDA support" OFF)
+
 # Устанавливаем путь к libtorch (можно переопределить извне)
 if(NOT DEFINED LIBTORCH_DIR)
     get_filename_component(LIBTORCH_DIR "${CMAKE_SOURCE_DIR}/../libtorch" REALPATH)
@@ -13,6 +15,22 @@ set(CMAKE_PREFIX_PATH "${LIBTORCH_DIR}")
 message(STATUS "LIBTORCH_DIR: ${LIBTORCH_DIR}")
 # Подключаем Torch
 find_package(Torch REQUIRED)
+
+if(USE_CUDA)
+    find_package(CUDA REQUIRED)
+    if(CUDA_FOUND)
+        message(STATUS "CUDA found: ${CUDA_TOOLKIT_ROOT_DIR}")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GLIBCXX_USE_CXX11_ABI=0 -gencode arch=compute_61,code=sm_61 -gencode arch=compute_70,code=sm_70 -gencode arch=compute_80,code=sm_80")
+        set(CMAKE_CUDA_STANDARD 14)
+        set(CMAKE_CUDA_FLAGS "--expt-extended-lambda")
+        target_link_libraries(${PROJECT_NAME} "${TORCH_LIBRARIES}" "${CUDA_LIBRARIES}")
+        target_include_directories(${PROJECT_NAME} PRIVATE ${CUDA_INCLUDE_DIRS})
+    else()
+        message(WARNING "CUDA not found, falling back to CPU mode.")
+    endif()
+else()
+    message(STATUS "CUDA support is disabled, building for CPU.")
+endif()
 
 if (WIN32)
 file(GLOB TORCH_DLLS "${LIBTORCH_DIR}/lib/*.dll")
