--- a/Toguzkumalak/Toguzkumalak.vcxproj
+++ b/Toguzkumalak/Toguzkumalak.vcxproj
@@ -154,7 +154,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <AdditionalIncludeDirectories>$(SolutionDir)libtorch\include\torch\csrc\api\include;$(SolutionDir)libtorch\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>Create</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <OmitFramePointers>false</OmitFramePointers>
     </ClCompile>
