--- a/Toguzkumalak/Toguzkumalak.vcxproj.filters
+++ b/Toguzkumalak/Toguzkumalak.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="train.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="arena.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="config.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
@@ -57,6 +60,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="train.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="arena.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="config.h">
