Add arena mode for automated selfplay and training

--- a/Toguzkumalak/config.ini
+++ b/Toguzkumalak/config.ini
@@ -37,3 +37,15 @@ model ./model_data/best_optimized.pt
 ai_side 0
 num_reads 800
 
+[arena]
+model ./model_data/best_optimized.pt
+save ./datasets/arena/
+dataset ./datasets/combined/arena_dataset.bin
+cycles 3
+games 10
+openmp true
+num_reads 800
+temperature 1.0
+temperature_cutoff 30
+epochs 1
+
